The idea behind these changes is to disallow required dropdown attributes without active attribute options, since this makes it impossible to enter an artifact.
* AttributeGroup.java: added methods getRModuleAttributes() and RIssueTypeAttributes() to obtain those objects directly for this attribute group. That way we do not have to do a database call to get each RModuleAttribute or RModuleIssueType when iterating through the group's attributes.
* ModuleAttributeEdit.java: doDeleteattributeoptions(), doSave(): check that user has not just deleted or inactivated all the options for a required attribute. If they have,  mark the attribute as non-required and display alert message letting the user know that has been done.
* IssueTypeAttributeEdit.java: doDeleteissuetypeoptions, doSave(): check that user has not just deleted or inactivated all the options for a required attribute. If they have,  mark the attribute as non-required and display alert message letting the user know that has been done. (same as above for global issue type mappings)
* AttributeGroup.java:  doSaveattributes(), doSaveglobal():  use AttributeGroup.getRModuleAttributes or RIssueTypeAttributes repectively instead of getAttributes, then retrieving each RMA or RIA in turn.   First iterate through to check that they are not marking required an attribute that has no active options. If they are, do not save, throw up alert message. Other minor code cleanups.
* IssueTypeAttributeEdit.vm, ModuleAttributeEdit.vm:  when going to add new global attribute options, the cancel-to target was getting lost.  Reset cancel target.
* ScarabBundle_en_US.properties: add resources CannotRequireAttributeWithNoOptions
and DeletedOptionsFromRequiredAttribute.
Issue number:  18689
Submitted by:  elicia

--- a/src/templates/screens/admin/ModuleAttributeEdit.vm
+++ b/src/templates/screens/admin/ModuleAttributeEdit.vm
@@ -4,6 +4,10 @@
 #set ($attType = $attribute.AttributeType)
 #set ($attTypeName = $attType.AttributeClass.Name)
 #set ($ria = $issueType.getRIssueTypeAttribute($attribute))
+#set ($cancelTemplate = $data.Parameters.getString("$scarabG.Constant.CANCEL_TEMPLATE", "admin,AttributeGroupEdit.vm"))
+#if ($cancelTemplate.equals("admin,ModuleAttributeEdit.vm"))
+    #set ($cancelTemplate = "admin,AttributeGroupEdit.vm")
+#end
 
 #macro (ModuleAttributeEditBar $val)
 <div class="functnbar$val">
@@ -24,7 +28,6 @@ $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").</em></p>
 <form action="$link.setPage("admin,ModuleAttributeEdit.vm")" method="post">
 <input type="hidden" name="action" value="admin.ModuleAttributeEdit" />
 <input type="hidden" name="$scarabG.Constant.OTHER_TEMPLATE" value="admin,AttributeOptionSelect.vm" />
-#set ($cancelTemplate = $data.Parameters.getString("$scarabG.Constant.CANCEL_TEMPLATE", "admin,AttributeGroupEdit.vm"))
 <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="$cancelTemplate" />
 <input type="hidden" name="att_0id" value="$attribute.AttributeId" />
 <input type="hidden" name="attributeid" value="$attribute.AttributeId" />
