--- a/src/templates/screens/admin/IssueTypeAttributeEdit.vm
+++ b/src/templates/screens/admin/IssueTypeAttributeEdit.vm
@@ -2,6 +2,10 @@
 #set ($attribute = $scarabR.Attribute)
 #set ($attType = $attribute.AttributeType)
 #set ($cancelTemplate = $data.Parameters.getString($scarabG.Constant.CANCEL_TEMPLATE))
+#if ($cancelTemplate.equals("admin,IssueTypeAttributeEdit.vm"))
+    #set ($cancelTemplate = "admin,GlobalAttributeGroupEdit.vm")
+#end
+
 #set ($attTypeName = $attType.AttributeClass.Name)
 
 #macro (IssueTypeAttributeEditBar $val)
