Issue number: 21855, 21631, and 22117.  All related to dealing with mysql limitations on the sql that issue search generates.  These commits mostly forward port the changes for 21855 which were applied to the SCAST_T1_1 branch that deal with the number of filter criteria that can be applied.  Issue 21631 was handled differently in this commit than the one applied earlier.  The maximum join limit is handled internally by executing additional select statements, so the columns displayed is not limited (until we are able to determine a new maximum.)  The display columns also do not enter into the filter criteria so we always have around 9-12 (current default is 9) filter criteria regardless of which columns are displayed. 22117 is just a request to port 21855 to HEAD.
Modified files:
* src/conf/Scarab.properties - added scarab.query.max.filter_criteria=9
* src/i18n/ScarabBundle_en_US.properties - Added keys for complex query
  messages and help:
  DupeCheckSkippedBecauseComplexity, SearchAbortedDueToComplexity, ClickHere,
  QueryLimits
* src/java/org/tigris/scarab/actions/ReportIssue.java - searchAndSetTemplate:
  Give alert if the dedupe step could not be performed and account for search
  results as an iterator instead of list.
* src/java/org/tigris/scarab/actions/Search.java - doPerform and doSelectquery:
  Account for search results as an iterator instead of list.
* src/java/org/tigris/scarab/screens/IssueListExport.java - writeRows:
  Account for search results as an iterator instead of list.
* src/java/org/tigris/scarab/tools/ScarabRequestTool.java -
  getCurrentSearchResults, getUnprotectedCurrentSearchResults,
  getUncachedCurrentSearchResults, getIssuePosInList, getNextIssue,
  getPrevIssue, resetIssueIdList: all modified to work with an iterator
  instead of list.  getCurrentSearchResults also modified to give alert
  message pointing to help doc, if the query was too complex
  Added getPaginatedIterator method which takes and returns an iterator,
  and mimics

--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -14,7 +14,7 @@
 #set ($pageNum = $data.Parameters.getInt('pageNum', 1))
 #set ($paginated = $resultsPerPage > 0 && $issueListSize > $resultsPerPage)
 #if ($paginated)
- #set ($queryResults = $scarabR.getPaginatedList($queryResults, $pageNum, $resultsPerPage))
+ #set ($queryResults = $scarabR.getPaginatedIterator($queryResults, $pageNum, $resultsPerPage))
  #set ($issueListSize = $queryResults.size())
 #end
 
@@ -151,21 +151,10 @@ $link.setPage('ConfigureIssueList.vm').setLabel($l10n.AddRemoreAttributesFromVie
 
 #set ($showModule = $mitlist && !$mitlist.isSingleModule())
 #set ($showIssueType = $mitlist && !$mitlist.isSingleIssueType())
-#foreach ($result in $queryResults)
+ #set ($listOffset = ($pageNum - 1) * $resultsPerPage)
+#set ($qrIterator = $scarabR.getIssueListIterator($queryResults, $listOffset, $totalCount))
+#foreach ($result in $qrIterator)
 
- #set ($issueLink = $link.setPage("ViewIssue.vm").setPathInfo("id", $result.UniqueId.toString()))
-
- ## append some of the neighbor ids, so that we do not always have to rerun
- ## the query to create prev/next links
- #set ($min = $velocityCount - 2)
- #set ($max = $velocityCount + 2)
- #set ($prevNextList = $scarabG.subset($queryResults, $min, $max))
- #set ($listOffset = (($pageNum - 1) * $resultsPerPage) + $min)
- #set ($dummy = $issueLink.addPathInfo("issueList", $listOffset))
- #set ($dummy = $issueLink.addPathInfo("issueList", $totalCount))
- #foreach ($prevNextQueryResult in $prevNextList)
-    #set ($dummy = $issueLink.addPathInfo("issueList", $prevNextQueryResult.UniqueId))
- #end
 
  #indexedRows($velocityCount)
   <td>
@@ -178,7 +167,8 @@ $link.setPage('ConfigureIssueList.vm').setLabel($l10n.AddRemoreAttributesFromVie
  #if ($showIssueType)
   <td>$result.RModuleIssueType.DisplayName</td> 
  #end
-  <td><a href="$issueLink">$result.UniqueId</a></td>
+  $qrIterator.initializeLink($link)
+  <td><a href="$link">$result.UniqueId</a></td>
 #if (!$noAttrs)
 #foreach ($value in $result.AttributeValuesAsCSV)
   <td>
@@ -200,7 +190,8 @@ $link.setPage('ConfigureIssueList.vm').setLabel($l10n.AddRemoreAttributesFromVie
        <th>$l10n.MaxPerPage</th>
  <td>
      #resultsPerPageRadioSelect($resultsPerPage true)
-     <input type="submit" name="eventSubmit_doRefresh" value="$l10n.Refresh" />
+     <input type="submit" name="eventSubmit_doRefreshresultsperpage" 
+         value="$l10n.Refresh" />
      <input type="hidden" name="oldResultsPerPage" value="$resultsPerPage" />
  </td>
    </tr>
