--- a/src/templates/screens/help/UserQuery.vm
+++ b/src/templates/screens/help/UserQuery.vm
@@ -18,6 +18,7 @@
             <li><a href="$link.setPage("help,UserQueryText.vm")">$l10n.TextQueries</a></li>
             <li><a href="$link.setPage("help,UserQuerySaved.vm")">$l10n.SavedQueries</a></li>
             <li><a href="$link.setPage("help,UserQueryCrossProject.vm")">$l10n.CrossProjectQueries</a></li>
+            <li><a href="$link.setPage("help,UserQueryComplex.vm")">$l10n.QueryLimits</a></li>
            </ul>
            </li>
           <li><a href="$link.setPage("help,UserReports.vm")">$l10n.HelpReports</a></li>
