--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -393,7 +393,7 @@
  <input type="radio" value="$num" name="newResultsPerPage" #if ($resultsPerPage == $num) checked="checked" #end /> $num
 #end
 #if ($showAll.toString().equals("true"))
- <input type="radio" value="-1" name="resultsPerPage" #if ($resultsPerPage == -1) checked="checked" #end /> $l10n.All
+ <input type="radio" value="-1" name="newResultsPerPage" #if ($resultsPerPage == -1) checked="checked" #end /> $l10n.All
 #end
 #end
 
