Issue number: 15691 - remove current issue type Modified files: * src/i18n/ScarabBundle_en_US.properties - replaced CurrentModuleTypesIntro   with two alternatives:   CurrentModuleTypesIntroShown and CurrentModuleTypesIntroHidden   and added HideThisSection resource.   Modified the SelectQuery text to make it a more obvious place to look   for a new query page. * src/java/org/tigris/scarab/actions/DefineXModuleList.java - added   doToggleothermodules to handle showing/hiding the other modules section   of issue types. * src/java/org/tigris/scarab/actions/ReportIssue.java - moved the guts of   the doSave method into a new cleanOutStaleIssue static method for   ease of access by TemplateList action. * src/java/org/tigris/scarab/actions/TemplateList.java - doUsetemplate:   clear out any partially entered issue before redirecting to enter a new one. * src/java/org/tigris/scarab/om/AbstractScarabUser.java - added   OtherModulesInIssueTypeList property with getter/setter to allow user to   toggle between single and cross module issue type lists * src/java/org/tigris/scarab/om/ScarabUser.java - see AbstractScarabUser * src/java/org/tigris/scarab/om/ScarabUserImpl.java - see AbstractScarabUser * src/java/org/tigris/scarab/tools/ScarabRequestTool.java - added   getLastEnteredIssueTypeOrTemplate method to be used in CommonNav.vm   for determining whether and how to display a quick link for entering a   new issue of the last entered type. * src/templates/macros/GlobalMacros.vm - attrValueLeafSelect macro: removed a   conditional block that was no longer relevent due to changes in the following   line.  I could have altered the conditional, but all the other similar macros   did not include it.   templateAttrValueLeafSelect macro: The issueType is already that of the   issue being entered, not the template. * src/templates/macros/MITListMacro.vm - createMITList macro: default to   only showing current module issuetypes with link to add other modules.   This keeps the screen sim

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -17,7 +17,6 @@
   #if ($size.length() == 0)
    <option value="">$l10n.Choose</option>
   #end
-  #if ($module.getLeafRModuleOptions($attr, $issueType))
   #foreach ($option in $module.getOptionTree($attr, $issueType))
     #set ($selected = false)
     #set ($canMakeTransition = true)
@@ -48,7 +47,6 @@
           $option.DisplayValue</option>
     #end
   #end
-  #end
 </select>
 #end
 
@@ -68,7 +66,7 @@
   #if ($size.length() == 0)
   <option value="">$l10n.Choose</option>
   #end
-  #foreach ($option in $module.getOptionTree($attr, $issue.IssueType.IssueTypeForTemplateType))
+  #foreach ($option in $module.getOptionTree($attr, $issue.IssueType))
     #set ($selected = false)
     #if ($currentValue && $option.OptionId == $currentValue)
          #set ($selected = true)
