Issue.java: move(): changing the approach so that we copy the complete history for an issue (before, change logs for issue modifications were not getting copied over). Now copy by iterating through the activitySet's and their corresponding activities and attachments.  If an activity is related to an attribute value, copy over the most recent value for that attribute into an attribute value for the new issue.    -- Set the transactions' created by and created date attributes to those of the original issue, instead of to the creating user and time.    --  Changed the name of getOrphanAttributeValues() method to getNonMatchingAttributeVaues() for clarity.  Note that now we save ourselves having to call both in the method as we are able to derive matching attributes to copy through the activity records.
* AttributeValue(): save(): when saving an attribute value, you can set its corresponding activity first.  When saving, check whether it has already been set before creating a new one.
* ActivitySet.java: add method getActivityListForIssue() to return set of activities for this activitySet and for the passed-in issue alone.

* MoveIssue2.vm: call the renamed method getNonMatchingAttributeValues()
Issue number: 21144
Submitted by:  elicia

--- a/src/templates/screens/MoveIssue2.vm
+++ b/src/templates/screens/MoveIssue2.vm
@@ -25,11 +25,11 @@
 #if ($isSingleIssueOp)
   ## For single issue move, display attribute values for this issue
   #set ($matchingAttributes = $issue.getMatchingAttributeValuesList($newModule, $newIssueType))
-  #set ($orphanAttributes = $issue.getOrphanAttributeValuesList($newModule, $newIssueType))
+  #set ($nonMatchingAttributes = $issue.getNonMatchingAttributeValuesList($newModule, $newIssueType))
 #else
   ## For multiple issue move, cannot display attribute values, only attributes.
   #set ($matchingAttributes = $issueType.getMatchingAttributeValuesList($module, $newModule, $newIssueType))
-  #set ($orphanAttributes = $issueType.getOrphanAttributeValuesList($module, $newModule, $newIssueType))
+  #set ($nonMatchingAttributes = $issueType.getNonMatchingAttributeValuesList($module, $newModule, $newIssueType))
 #end
 
 #if ($selectAction.toString().equals("move"))
@@ -105,7 +105,7 @@
 </table>
 #end
 
-#if (!$orphanAttributes.isEmpty())
+#if (!$nonMatchingAttributes.isEmpty())
 <h3>$l10n.AttributesThatDoNotExist</h3>
 <div class="colbar">$l10n.IncludedAsComment</div>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
@@ -117,7 +117,7 @@
 <th>$l10n.Value</th>
 #end
 </tr>
-#foreach($attr in $orphanAttributes)
+#foreach($attr in $nonMatchingAttributes)
   #if ($isSingleIssueOp)
      #set ($attVal=$attr)
      #set ($attr = $attVal.Attribute)
