Formative stages of data access layer to allow for improvements in peformance, scalability, and reliability.
* src/conf/Scarab.properties
  dataaccess.AttributeAccess.classname: First data access API.


* src/java/org/tigris/scarab/om/AbstractScarabModule.java
  getDefaultRModuleUserAttributes(IssueType): Changed what's returned
  to be a list of Strings (what the caller now expects).


* src/java/org/tigris/scarab/om/AbstractScarabUser.java
  GET_R_MODULE_USERATTRIBUTES: Removed, no longer used.

  getRModuleUserAttributes(Module, IssueType): Moved to
  ScarabAttributeAccess.

  updateIssueListAttributes(List): Delegate to AttributeAccess's
  deleteQueryColumnIDs() API.

  deleteRModuleUserAttribute(RModuleUserAttribute): Removed.


* src/java/org/tigris/scarab/om/MITList.java
  getCommonRModuleUserAttributes(): Now returns user attribute IDs
  instead of RModuleUserAttribute objects.

  getSavedRMUAs(): Moved majority of impl to AttributeAccess's
  retrieveQueryColumnIDs() method.

  deleteSavedRMUAs(): New method which delegates to AttributeAccess.


* src/java/org/tigris/scarab/om/RModuleUserAttribute.java
  delete(ScarabUser): Removed.


* src/java/org/tigris/scarab/om/ScarabUser.java
  getRModuleUserAttributes(Module, IssueType),
  getRModuleUserAttribute(Module, Attribute, IssueType): Removed.


* src/java/org/tigris/scarab/om/ScarabUserImpl.java
  privateDeleteRModuleUserAttribute(),
  getRModuleUserAttributes(Module, IssueType): Removed.


* src/java/org/tigris/scarab/tools/ScarabRequestTool.java
  getRModuleUserAttributes(): Delegates to AttributeAccess.


* src/java/org/tigris/scarab/util/word/IssueSearch.java
  getSearchSqlPieces(): Type cleanup.


* src/templates/screens/ConfigureIssueList.vm
  Calculate order in place.


Submitted by: John McNally and Daniel Rall

--- a/src/templates/screens/ConfigureIssueList.vm
+++ b/src/templates/screens/ConfigureIssueList.vm
@@ -32,11 +32,9 @@
  </tr>
 
  #foreach ($attribute in $attributes)
-  #set ($userAttribute = $user.getRModuleUserAttribute($attribute))
-  #set ($order = 0)
-  #foreach ($moduleUserAttribute in $scarabR.RModuleUserAttributes)
-   #if ($attribute.Name.equals($moduleUserAttribute.Attribute.Name))
-    #set ($order = $moduleUserAttribute.Order)
+  #foreach ($columnAttribute in $scarabR.RModuleUserAttributes)
+   #if ($attribute.QueryKey.equals($columnAttribute))
+    #set ($order = $velocityCount)
    #end
   #end
 
