Api cleanup:   getAttributeGroups methods existed in both IssueType and Module.  The   Module versions just called the IssueType ones so this commit replaces any   calls to the Module version with the IssueType one.  Method calls that   were to overloaded versions that could be altered use the full signature   version were changed. Unless more detail below the above description is   assumed to cover the change. Modified Files: * src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java -   doSavegroups and doDeletegroup * src/java/org/tigris/scarab/actions/admin/AttributeGroupEdit.java -   doDeleteattributes * src/java/org/tigris/scarab/actions/admin/GlobalArtifactTypeCreate.java -   doSaveGroups and doDeleteGroup * src/java/org/tigris/scarab/om/AbstractScarabModule.java -   getAttributeGroups removed * src/java/org/tigris/scarab/om/AttributeGroup.java - delete * src/java/org/tigris/scarab/om/IssueType.java - getAttributeGroups(Module)   removed * src/java/org/tigris/scarab/om/Module.java - getAttributeGroups removed * src/java/org/tigris/scarab/om/RModuleIssueType.java - delete * src/templates/macros/AdvancedQueryMacro.vm - queryAttributesSection macro * src/templates/macros/XMLExportSettingsMacro.vm - XMLExportSettings macro * src/templates/screens/SaveTemplate.vm * src/templates/screens/admin/ArtifactTypeEdit.vm * src/templates/screens/entry/Wizard3.vm * src/templates/viewIssue/ViewIssueTab1.vm * src/test/org/tigris/scarab/om/AttributeGroupTest.java - testDelete * src/test/org/tigris/scarab/om/IssueTypeTest.java - testGetAttributeGroups:   was calling torque generated method, substituted a "real" api method. * src/test/org/tigris/scarab/om/ScarabModuleTest.java - testGetAttributeGroups

--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -341,7 +341,7 @@ $l10n.From:&#160;<input type="text" size="20"
  #set ( $module = $search.getModule() )
  #set ( $issueType = $search.getIssueType() )
  #set ($firstTextWidget = true)
- #foreach ($group in $module.getAttributeGroups($issueType,false))
+ #foreach ($group in $issueType.getAttributeGroups($module,false))
   #if (($optionsOnly && $group.hasAnyOptionAttributes()) || (!$optionsOnly && !$group.Attributes.isEmpty()))
     <h$headerLevel>$group.Name</h$headerLevel>
     <table cellpadding="3" cellspacing="2" border="0">
