--- a/src/templates/screens/entry/Wizard3.vm
+++ b/src/templates/screens/entry/Wizard3.vm
@@ -8,7 +8,7 @@
 
 <input type="hidden" name="issueType" value="$issueType.IssueTypeId" />
 
-#set ($moduleAttributeGroups = $module.getAttributeGroups($issueType))
+#set ($moduleAttributeGroups = $issueType.getAttributeGroups($module, true))
 #set ($showTemplates = true)
 #if ($data.Parameters.getString("oldscreen"))
   #set ($showTemplates = false)
