* AttributeValue.java:  getRModuleAttribute(): when retrieving the RMA, it can be null, since this attribute value can be inherited from a parent module. * Search.vm: check for null RMA when displaying attribute name. If it is null, use attribute global name. Issue number:  22215

--- a/src/templates/screens/Search.vm
+++ b/src/templates/screens/Search.vm
@@ -58,7 +58,12 @@ $user.setHomePage("query")
       #end
     #end
   #end
-  <option value="$att.Attribute.QueryKey"#selected($selected)>$att.RModuleAttribute.DisplayValue</option>
+  #set ($rma = $att.RModuleAttribute)
+  #if ($rma)
+  <option value="$att.Attribute.QueryKey"#selected($selected)>$rma.DisplayValue</option>
+  #else
+  <option value="$att.Attribute.QueryKey"#selected($selected)>$att.Attribute.Name</option>
+  #end
   #set ($selected = false)
 #end
    </select>
