--- a/src/org/objectweb/carol/cmi/compiler/ClusterStubTemplate.vm
+++ b/src/org/objectweb/carol/cmi/compiler/ClusterStubTemplate.vm
@@ -21,35 +21,19 @@
 package $pkgName;
 
 #end
-import java.io.IOException;
-import java.io.ObjectInput;
-import java.io.ObjectOutput;
-import java.io.Externalizable;
-import java.rmi.ConnectException;
-import java.rmi.ConnectIOException;
-import java.rmi.Remote;
-import java.rmi.RemoteException;
-import org.objectweb.carol.cmi.ClusterId;
-import org.objectweb.carol.cmi.ClusterStub;
-import org.objectweb.carol.cmi.ClusterStubData;
-import org.objectweb.carol.cmi.Random;
-import org.objectweb.carol.cmi.RoundRobin;
-import org.objectweb.carol.cmi.StubLB;
-import org.objectweb.carol.cmi.StubLBFilter;
-
-public class ${className}_Cluster implements ClusterStub, Externalizable, $classConf.getRemoteItfString() {
-	private transient ClusterStubData csd;
+public class ${className}_Cluster implements org.objectweb.carol.cmi.ClusterStub, java.io.Externalizable, $classConf.getRemoteItfString() {
+	private transient org.objectweb.carol.cmi.ClusterStubData csd;
 
 	// lb choosers
 #foreach ($c in $classConf.getRR())
-	private transient StubLB $c;
+	private transient org.objectweb.carol.cmi.StubLB $c;
 #end
 #foreach ($c in $classConf.getRandom())
-	private transient StubLB $c;
+	private transient org.objectweb.carol.cmi.StubLB $c;
 #end
 
 	// used by the DistributedEquivSystem
-	public ${className}_Cluster(ClusterStubData csd) {
+	public ${className}_Cluster(org.objectweb.carol.cmi.ClusterStubData csd) {
 		this.csd = csd;
 #foreach ($c in $classConf.getRR())
 		$c = csd.getRoundRobin();
@@ -63,12 +47,12 @@ public class ${className}_Cluster implements ClusterStub, Externalizable, $class
 	public ${className}_Cluster() {
 	}
 
-	public void writeExternal(ObjectOutput out) throws IOException {
+	public void writeExternal(java.io.ObjectOutput out) throws java.io.IOException {
 		csd.write(out);
 	}
 
-	public void readExternal(ObjectInput in) throws IOException, ClassNotFoundException {
-		csd = ClusterStubData.read(in, this);
+	public void readExternal(java.io.ObjectInput in) throws java.io.IOException, java.lang.ClassNotFoundException {
+		csd = org.objectweb.carol.cmi.ClusterStubData.read(in, this);
 #foreach ($c in $classConf.getRR())
 		$c = csd.getRoundRobin();
 #end
@@ -81,8 +65,9 @@ public class ${className}_Cluster implements ClusterStub, Externalizable, $class
 #set($lb = $mc.getBalancer())
 	//$mc.getBalancer()
 	public $mc.getReturnTypeName() $mc.getMthName()($mc.getParamString()) throws $mc.getThrowsString() {
-		$mc.getDeclItfName() stub = ($mc.getDeclItfName()) ${lb}.get();
-		StubLBFilter filter = null;
+		org.objectweb.carol.cmi.StubData sd = ${lb}.get();
+		$mc.getDeclItfName() stub = ($mc.getDeclItfName()) sd.getStub();
+		org.objectweb.carol.cmi.StubLBFilter filter = null;
 		do {
 			try {
 				if (csd.isStubDebug()) {
@@ -95,22 +80,26 @@ public class ${className}_Cluster implements ClusterStub, Externalizable, $class
 				$mc.getReturnTypeName() result = stub.$mc.getMthName()($mc.getParamNamesString());
 				return result;
 #end
-			} catch (RemoteException e) {
-				if (!(e instanceof ConnectException)
-					&& !(e instanceof ConnectIOException)) {
+			} catch (java.rmi.RemoteException e) {
+				if (!(e instanceof java.rmi.ConnectException)
+					&& !(e instanceof java.rmi.ConnectIOException)) {
 					throw e;
 				}
 				if (csd.isStubDebug()) {
 					csd.debug("Connection refused, retry");
 				}
 				if (filter == null) {
-					filter = new StubLBFilter();
+					filter = new org.objectweb.carol.cmi.StubLBFilter();
 				}
-				filter.add(stub);
-				stub = ($mc.getDeclItfName()) ${lb}.get(filter);
+				filter.add(sd);
+				sd = ${lb}.get(filter);
+				stub = ($mc.getDeclItfName()) sd.getStub();
 			}
 		} while (true);
 	}
 
 #end
+	public java.lang.String toString() {
+		return this.getClass().getName() + csd.toContentsString();
+	}
 }
