* AbstractScarabModule.java, ScarabModule.java: getRModuleAttributes():  get rid of getRModuleAttributesThisModuleOnly() since we no longer have RMA's be inherited by child modules.  No need to override getRModuleAttributes. * ScarabRequestTool.java: add getAttribute(String pk) method so templates can retrieve attribute by string pk. * IssueList.vm, Search.vm:  the sort attribute is now an attribute id (as string), so retrieve Attribute object to get names and id's of sort attributes.

--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -121,7 +121,7 @@ $link.setPage('ConfigureIssueList.vm').setLabel($l10n.AddRemoreAttributesFromVie
 #if (!$noAttrs)
 #set ($rmuas = $scarabR.RModuleUserAttributes)
 #foreach ($rmua in $rmuas)
- #set ($userAttribute = $rmua.Attribute)
+ #set ($userAttribute = $scarabR.getAttribute($rmua))
  #if ($mitlist.isSingleModuleIssueType())
    #set ($value = $mitlist.Module.getRModuleAttribute($userAttribute, $mitlist.IssueType).DisplayValue)
  #else
