* GlobalMacros.vm: attributeCreatedBy(): set $createdBy to 0 first to make sure it does not stay set to the last setting through the loop. Check for this value to display "Default" if there is no value. * GlobalAttributeShow.vm:  add $parameters parameter to paginateWithSearch macro. Issue number: 21672

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -566,8 +566,8 @@ selected the radio button.
 ## of getCreatedBy()).  Post Beta milestone,
 ## SCARAB_ATTRIBUTE.CREATED_BY needs to have its FK reference to
 ## TURBINE_USER.USER_ID defined.
-
-#set ($creatorID = "$attribute.CreatedBy")
+#set ($creatorID = "0")
+#set ($creatorID = $attribute.CreatedBy)
 #if ($creatorID == "0")
     Default
 #else
